# rust_exchange

./: .env.example  Cargo.toml  docker-compose.yml
migrations/: 20250131000001_users.sql  20250131000002_orders.sql  20250131000003_trades.sql  20250131000004_positions.sql
src/: lib.rs  main.rs  positions.rs
src/api/: auth.rs  mod.rs  routes.rs  ws.rs
src/orderbook/: mod.rs  orderbook.rs
src/persistence/: mod.rs  orders.rs  pool.rs  positions.rs  trades.rs  users.rs
src/types/: order.rs  position.rs  trade.rs
tests/: auth.rs  orderbook.rs  positions.rs  trades.rs
