[package]
name = "rust_exchange"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros","net", "rt-multi-thread"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
jsonwebtoken = "9.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }